<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.verificationcode.LoginByPhoneNumberAndVerificationCodeNextFragment"
    tools:ignore="LabelFor">

    <com.bytedance.douyin.core.designsystem.widget.AppTitleBar
        android:id="@+id/title_bar"
        style="@style/douyin_feature_login_title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rightText="@string/douyin_feature_login_help_and_setup" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        style="@style/douyin_feature_login_scroll_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scroll_view_content"
            style="@style/douyin_feature_login_scroll_view_content">

            <TextView
                android:id="@+id/title"
                style="@style/douyin_feature_login_title"
                android:text="@string/douyin_feature_login_phone_number_and_verification_code_next_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subtitle"
                style="@style/douyin_feature_login_subtitle"
                android:text="@string/douyin_feature_login_phone_number_and_verification_code_next_verification_code_hint_tools"
                app:layout_constraintEnd_toEndOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <EditText
                android:id="@+id/verification_code"
                style="@style/douyin_feature_login_input_verification_code"
                app:layout_constraintEnd_toEndOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/subtitle" />

            <TextView
                android:id="@+id/error"
                style="@style/douyin_feature_login_error"
                app:layout_constraintEnd_toEndOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/verification_code"
                tools:text="@string/douyin_feature_login_register_error_tools" />

            <Button
                android:id="@+id/login"
                style="@style/douyin_feature_login_submit_button"
                android:text="@string/douyin_feature_login_login"
                app:layout_constraintEnd_toEndOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/error" />

            <TextView
                android:id="@+id/voice_verification_code"
                style="@style/douyin_feature_login_voice_verification_code"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/login"
                tools:text="@string/douyin_feature_login_phone_number_and_verification_code_next_voice_verification_code_tools" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>