<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.password.LoginByPhoneNumberAndPasswordFragment"
    tools:ignore="LabelFor">

    <com.bytedance.douyin.core.designsystem.widget.AppTitleBar
        android:id="@+id/title_bar"
        style="@style/douyin_feature_login_title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rightText="@string/douyin_feature_login_help_and_setup" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        style="@style/douyin_feature_login_scroll_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scroll_view_content"
            style="@style/douyin_feature_login_scroll_view_content">

            <TextView
                android:id="@+id/title"
                style="@style/douyin_feature_login_title"
                android:text="@string/douyin_feature_login_phone_number_and_password_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/phone_number"
                style="@style/douyin_feature_login_input_phone_number"
                app:layout_constraintEnd_toEndOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <EditText
                android:id="@+id/password"
                style="@style/douyin_feature_login_input_password"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/phone_number" />

            <TextView
                android:id="@+id/error"
                style="@style/douyin_feature_login_error"
                app:layout_constraintEnd_toEndOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/password"
                tools:text="@string/douyin_feature_login_register_error_tools" />

            <com.bytedance.douyin.core.designsystem.widget.ClickableSpanCheckBox
                android:id="@+id/agreement"
                style="@style/douyin_feature_login_agreement"
                app:layout_constraintEnd_toEndOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/error"
                tools:text="@string/douyin_feature_login_phone_number_and_verification_code_agreement_tools_start" />

            <Button
                android:id="@+id/login"
                style="@style/douyin_feature_login_submit_button"
                android:text="@string/douyin_feature_login_login"
                app:layout_constraintEnd_toEndOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/agreement" />

            <TextView
                android:id="@+id/retrieve_password"
                style="@style/douyin_feature_login_retrieve_password"
                app:layout_constraintEnd_toStartOf="@id/login_email_and_password"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/login"
                tools:text="@string/douyin_feature_login_phone_number_and_password_retrieve_password_tools" />

            <TextView
                android:id="@+id/login_email_and_password"
                style="@style/douyin_feature_login_other_button_horizontal_end"
                android:text="@string/douyin_feature_login_login_email_and_password"
                app:layout_constraintEnd_toEndOf="@id/title"
                app:layout_constraintStart_toEndOf="@id/retrieve_password"
                app:layout_constraintTop_toBottomOf="@id/login" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>