<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.retrievepassword.RetrievePasswordNewPasswordFragment"
    tools:ignore="LabelFor">

    <com.bytedance.douyin.core.designsystem.widget.AppTitleBar
        android:id="@+id/title_bar"
        style="@style/douyin_feature_login_title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        style="@style/douyin_feature_login_scroll_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scroll_view_content"
            style="@style/douyin_feature_login_scroll_view_content">

            <TextView
                android:id="@+id/title"
                style="@style/douyin_feature_login_title"
                android:text="@string/douyin_feature_login_retrieve_password_new_password_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subtitle"
                style="@style/douyin_feature_login_subtitle"
                android:text="@string/douyin_feature_login_retrieve_password_new_password_subtitle"
                app:layout_constraintEnd_toEndOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <EditText
                android:id="@+id/password"
                style="@style/douyin_feature_login_input_password"
                app:layout_constraintEnd_toEndOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/subtitle" />

            <TextView
                android:id="@+id/error"
                style="@style/douyin_feature_login_error"
                app:layout_constraintEnd_toEndOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/password"
                tools:text="@string/douyin_feature_login_register_error_tools" />

            <Button
                android:id="@+id/complete"
                style="@style/douyin_feature_login_submit_button"
                android:text="@string/douyin_feature_login_complete"
                app:layout_constraintEnd_toEndOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/error" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>